# -CppCalculator

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEARNING.md  README.md  SECURITY.md  calc_history.txt  run-tests.ps1  smart_calculator.cpp
.github/workflows/: ci.yml
include/: calculator.h
src/: calculator.cpp
tests/: simple_tests.cpp  test_calculator.cpp
